--- a/index.html
+++ b/index.html
@@ -113,8 +113,14 @@
         pointer-events: none;
       }
       @keyframes pulsate-glow {
-        0%, 100% { text-shadow: 0 0 5px currentColor, 0 0 10px currentColor; }
-        50% { text-shadow: 0 0 10px currentColor, 0 0 20px currentColor, 0 0 30px currentColor; }
+        0%, 100% { 
+          text-shadow: 0 0 5px currentColor, 0 0 10px currentColor; 
+          filter: brightness(1);
+        }
+        50% { 
+          text-shadow: 0 0 12px currentColor, 0 0 24px currentColor, 0 0 35px currentColor;
+          filter: brightness(1.5);
+        }
       }
       .animate-pulsate-glow {
         animation: pulsate-glow 1.5s ease-in-out infinite;
@@ -139,7 +145,7 @@
         50% { 
           transform: scale(1.02);
           box-shadow: inset 0 0 12px 2px rgba(217, 70, 239, 0.5);
-          border-radius: 1rem;
+          border-radius: 0.375rem; /* rounded-md */
         }
       }
       .task-item-flashing-high { animation: flash-high 0.8s ease-in-out; }
@@ -148,7 +154,7 @@
         50% { 
           transform: scale(1.02);
           box-shadow: inset 0 0 12px 2px rgba(234, 179, 8, 0.5);
-          border-radius: 1rem;
+          border-radius: 0.375rem; /* rounded-md */
         }
       }
       .task-item-flashing-medium { animation: flash-medium 0.8s ease-in-out; }
@@ -157,7 +163,7 @@
         50% {
           transform: scale(1.02);
           box-shadow: inset 0 0 12px 2px rgba(6, 182, 212, 0.5);
-          border-radius: 1rem;
+          border-radius: 0.375rem; /* rounded-md */
         }
       }
       .task-item-flashing-low { animation: flash-low 0.8s ease-in-out; }
@@ -205,12 +211,6 @@ import ReactDOM from 'react-dom/client';
 const AddIcon = ({ className }) => (
   <svg className={className} xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
     <path d="M11 11V5h2v6h6v2h-6v6h-2v-6H5v-2h6Z" />
-  </svg>
-);
-
-const CheckIcon = ({ className }) => (
-  <svg className={className} xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-    <path d="M9.9997 15.1709_19.1921 5.97852_20.6063 7.39273_9.9997 18.0003_3.63574 11.6364_5.04996 10.2221z" />
   </svg>
 );
 
@@ -266,14 +266,21 @@ const SystemInfoPanel = () => {
 };
 
 // === components/TaskItem.jsx ===
-const TaskItem = ({ task, onComplete, onRemove, isFlashing }) => {
+const TaskItem = ({ task, onComplete, onRemove, onEdit, isEditing, isFlashing }) => {
   const [isExiting, setIsExiting] = useState(false);
   const [isEntering, setIsEntering] = useState(true);
   const [showDetails, setShowDetails] = useState(false);
 
+  const longPressTimer = useRef();
+  const pressStartTime = useRef(0);
+  const clickHandlerRef = useRef(null);
+  
   useEffect(() => {
     const timer = setTimeout(() => setIsEntering(false), 10);
-    return () => clearTimeout(timer);
+    return () => {
+        clearTimeout(timer);
+        clearTimeout(longPressTimer.current);
+    }
   }, []);
   
   useEffect(() => {
@@ -284,6 +291,26 @@ const TaskItem = ({ task, onComplete, onRemove, isFlashing }) => {
       }, 800); // Match exit animation duration
     }
   }, [task.isCompleting, onRemove, task.id, isExiting]);
+  
+  clickHandlerRef.current = () => setShowDetails(s => !s);
+
+  const handlePointerDown = (e) => {
+    e.target.style.userSelect = 'none';
+    pressStartTime.current = Date.now();
+    longPressTimer.current = setTimeout(() => {
+        onEdit(task);
+    }, 500);
+  };
+  const handlePointerUp = (e) => {
+      e.target.style.userSelect = 'auto';
+      clearTimeout(longPressTimer.current);
+      const pressDuration = Date.now() - pressStartTime.current;
+      if (pressDuration < 500) {
+          if (clickHandlerRef.current) {
+              clickHandlerRef.current();
+          }
+      }
+  };
 
   const formatTimestamp = (date) => {
     if (!date) return 'TIMESTAMP N/A';
@@ -305,24 +332,27 @@ const TaskItem = ({ task, onComplete, onRemove, isFlashing }) => {
       labelColor: 'text-fuchsia-400',
       labelGlow: 'text-glow animate-pulsate-glow',
       textColor: 'text-fuchsia-300',
-      buttonClasses: 'border-fuchsia-500 text-fuchsia-500 hover:bg-fuchsia-500',
-      flashClass: 'task-item-flashing-high'
+      barColor: 'bg-fuchsia-500',
+      flashClass: 'task-item-flashing-high',
+      editingClass: 'ring-2 ring-fuchsia-400 ring-inset'
     },
     Medium: {
       hoverGlow: 'task-item-hover-glow-medium',
       labelColor: 'text-yellow-400',
       labelGlow: '',
       textColor: 'text-yellow-300',
-      buttonClasses: 'border-yellow-500 text-yellow-500 hover:bg-yellow-500',
-      flashClass: 'task-item-flashing-medium'
+      barColor: 'bg-yellow-500',
+      flashClass: 'task-item-flashing-medium',
+      editingClass: 'ring-2 ring-yellow-400 ring-inset'
     },
     Low: {
       hoverGlow: 'task-item-hover-glow-low',
       labelColor: 'text-cyan-400',
       labelGlow: '',
       textColor: 'text-cyan-300',
-      buttonClasses: 'border-cyan-500 text-cyan-500 hover:bg-cyan-500',
-      flashClass: 'task-item-flashing-low'
+      barColor: 'bg-cyan-500',
+      flashClass: 'task-item-flashing-low',
+      editingClass: 'ring-2 ring-cyan-400 ring-inset'
     }
   };
   const config = priorityConfig[task.priority] || priorityConfig['Medium'];
@@ -333,21 +363,22 @@ const TaskItem = ({ task, onComplete, onRemove, isFlashing }) => {
     : (isEntering ? 'task-item-enter' : 'task-item-enter-active');
   const themeClasses = `bg-gray-900/50 ${config.hoverGlow}`;
   const flashingClass = isFlashing ? config.flashClass : '';
+  const editingClass = isEditing ? config.editingClass : '';
 
   return (
     <li 
-      className={`${baseClasses} ${stateClasses} ${themeClasses} ${flashingClass}`} 
-      onClick={() => setShowDetails(!showDetails)}
+      className={`${baseClasses} ${stateClasses} ${themeClasses} ${flashingClass} ${editingClass}`} 
+      onPointerDown={handlePointerDown}
+      onPointerUp={handlePointerUp}
+      onPointerLeave={handlePointerUp}
     >
-      <div className="flex items-center justify-between">
+      <div className={`absolute left-0 top-0 h-full w-1.5 ${config.barColor} ${task.priority === 'High' ? 'animate-pulse' : ''}`}></div>
+      <div className="flex items-center justify-between pl-4">
         <div className="flex-grow pr-4">
             <p className="text-xs text-cyan-600/80 mb-1">// LOGGED: {formatTimestamp(task.createdAt)}</p>
             <p className={`${config.textColor}`}>{task.text}</p>
         </div>
-        <div className="flex items-center flex-shrink-0 gap-4">
-          <span className={`text-xs font-bold ${config.labelColor} ${config.labelGlow}`}>
-            // {task.priority.toUpperCase()}
-          </span>
+        <div className="flex items-center flex-shrink-0">
           <button
             onClick={(e) => {
               e.stopPropagation();
@@ -356,15 +387,15 @@ const TaskItem = ({ task, onComplete, onRemove, isFlashing }) => {
               }
             }}
             disabled={task.isCompleting}
-            className={`w-8 h-8 flex items-center justify-center border-2 rounded-full hover:text-black transition-all duration-300 focus:outline-none focus:ring-2 focus:ring-opacity-50 disabled:opacity-50 ${config.buttonClasses}`}
-            aria-label={`Complete task: ${task.text}`}
+            className={`text-xs font-bold ${config.labelColor} ${config.labelGlow} bg-transparent border-none p-2 cursor-pointer transition-transform duration-200 hover:scale-110`}
+            aria-label={`Complete task with priority ${task.priority}: ${task.text}`}
           >
-            <CheckIcon className="w-5 h-5" />
+            // {task.priority.toUpperCase()}
           </button>
         </div>
       </div>
       {showDetails && task.details && (
-          <div className={`mt-2 pt-2 pl-4 border-t border-cyan-800/50 text-gray-400 text-sm whitespace-pre-wrap ${showDetails ? 'details-enter-active' : 'details-enter'}`}>
+          <div className={`mt-2 pt-2 pl-8 border-t border-cyan-800/50 text-gray-400 text-sm whitespace-pre-wrap ${showDetails ? 'details-enter-active' : 'details-enter'}`}>
             {task.details}
           </div>
       )}
@@ -378,7 +409,8 @@ const App = () => {
   const [tasks, setTasks] = useState([
       { id: 1, text: "Connect to command console", details: "Check mission logs and familiarize with the UI.", priority: "High", isCompleting: false, createdAt: new Date() },
       { id: 2, text: "Add new mission targets", details: "Use the input fields below to add new tasks to the list.", priority: "Medium", isCompleting: false, createdAt: new Date() },
-      { id: 3, text: "Neutralize a target", details: "Click the checkmark button to complete a task.", priority: "Low", isCompleting: false, createdAt: new Date() },
+      { id: 3, text: "Neutralize a target", details: "Click the priority label (e.g. // HIGH) to complete a task.", priority: "Low", isCompleting: false, createdAt: new Date() },
+      { id: 4, text: "Edit a target", details: "Long-press or long-click on a mission log to load it into the editor below.", priority: "Medium", isCompleting: false, createdAt: new Date() },
   ]);
   const [newTask, setNewTask] = useState('');
   const [newTaskDetails, setNewTaskDetails] = useState('');
@@ -386,6 +418,7 @@ const App = () => {
   const [showBriefing, setShowBriefing] = useState(false);
   const [flashingTaskIndex, setFlashingTaskIndex] = useState(0);
   const [confirmationMessage, setConfirmationMessage] = useState('');
+  const [editingTask, setEditingTask] = useState(null);
 
   const confirmationMessages = [
     'TARGET NEUTRALIZED',
@@ -480,21 +513,48 @@ const App = () => {
     setTasks(prevTasks => sortTasks(prevTasks));
   }, []);
 
-  const handleAddTask = (e) => {
+  useEffect(() => {
+      if (editingTask) {
+          setNewTask(editingTask.text);
+          setNewTaskDetails(editingTask.details || '');
+          setNewPriority(editingTask.priority);
+          setShowBriefing(!!editingTask.details);
+      } else {
+          setNewTask('');
+          setNewTaskDetails('');
+          setNewPriority('Medium');
+          setShowBriefing(false);
+      }
+  }, [editingTask]);
+
+  const handleSubmit = (e) => {
     e.preventDefault();
     if (newTask.trim() === '') return;
-    const taskToAdd = {
-      id: Date.now().toString(36) + Math.random().toString(36).substring(2),
-      text: newTask.trim(),
-      details: newTaskDetails.trim(),
-      priority: newPriority,
-      isCompleting: false,
-      createdAt: new Date(),
-    };
-    setTasks(prevTasks => sortTasks([...prevTasks, taskToAdd]));
-    setNewTask('');
-    setNewTaskDetails('');
-    setShowBriefing(false);
+
+    if (editingTask) {
+        const updatedTask = {
+            ...editingTask,
+            text: newTask.trim(),
+            details: newTaskDetails.trim(),
+            priority: newPriority,
+        };
+        setTasks(prevTasks => sortTasks(prevTasks.map(t => t.id === editingTask.id ? updatedTask : t)));
+        setEditingTask(null);
+    } else {
+        const taskToAdd = {
+          id: Date.now().toString(36) + Math.random().toString(36).substring(2),
+          text: newTask.trim(),
+          details: newTaskDetails.trim(),
+          priority: newPriority,
+          isCompleting: false,
+          createdAt: new Date(),
+        };
+        setTasks(prevTasks => sortTasks([...prevTasks, taskToAdd]));
+    }
+  };
+
+  const handleCancelEdit = () => {
+      setEditingTask(null);
   };
 
   const handleCompleteTask = (id) => {
@@ -557,8 +617,10 @@ const App = () => {
                             key={task.id} 
                             task={task} 
                             onComplete={handleCompleteTask} 
-                            onRemove={handleRemoveTask} 
-                            isFlashing={activeTaskIndex === flashingTaskIndex}
+                            onRemove={handleRemoveTask}
+                            onEdit={setEditingTask}
+                            isEditing={editingTask?.id === task.id}
+                            isFlashing={!editingTask && activeTaskIndex === flashingTaskIndex}
                           />
                         )
                       })}
@@ -573,7 +635,7 @@ const App = () => {
 
 
               <footer className="w-full pt-2">
-                <form onSubmit={handleAddTask}>
+                <form onSubmit={handleSubmit}>
                     <div className="flex justify-center gap-2 md:gap-3 mb-3">
                     {priorities.map(p => {
                       const config = priorityButtonConfig[p];
@@ -594,31 +656,36 @@ const App = () => {
                       )
                     })}
                   </div>
-                    <div className="flex gap-2 items-center">
+                    <div className="flex gap-2 items-start">
                     <input
                         type="text"
                         value={newTask}
                         onChange={(e) => setNewTask(e.target.value)}
-                        placeholder=">> Add new target..."
+                        placeholder={editingTask ? ">> Edit target name..." : ">> Add new target..."}
                         className="w-full flex-grow bg-gray-900/70 border border-fuchsia-500/50 text-fuchsia-300 px-3 py-1.5 focus:outline-none focus:ring-2 focus:ring-fuchsia-400 focus:border-transparent transition-all"
                     />
                     <button type="button" onClick={() => setShowBriefing(!showBriefing)} className="px-3 py-1.5 flex-shrink-0 text-xs border-2 border-cyan-700 text-cyan-400 hover:bg-cyan-700/50 transition-all">
                       BRIEFING
                     </button>
+                    {editingTask && (
+                       <button type="button" onClick={handleCancelEdit} className="px-3 py-1.5 flex-shrink-0 text-xs border-2 border-yellow-700 text-yellow-400 hover:bg-yellow-700/50 transition-all">
+                        CANCEL
+                      </button>
+                    )}
                     <button
                       type="submit"
-                      className="w-9 h-9 flex-shrink-0 flex items-center justify-center bg-cyan-500/20 border-2 border-cyan-500 text-cyan-300 hover:bg-cyan-500 hover:text-black transition-all duration-300 disabled:opacity-50"
+                      className="w-auto px-3 h-9 flex-shrink-0 flex items-center justify-center bg-cyan-500/20 border-2 border-cyan-500 text-cyan-300 hover:bg-cyan-500 hover:text-black transition-all duration-300 disabled:opacity-50"
                       disabled={!newTask.trim()}
-                      aria-label="Add new target"
+                      aria-label={editingTask ? 'Update target' : 'Add new target'}
                     >
-                      <AddIcon className="w-6 h-6"/>
+                      {editingTask ? 'UPDATE' : <AddIcon className="w-6 h-6"/>}
                     </button>
                   </div>
                   <div className={showBriefing ? 'details-enter-active' : 'details-enter'}>
                     <textarea
                         value={newTaskDetails}
                         onChange={(e) => setNewTaskDetails(e.target.value)}
-                        placeholder=">> Add mission briefing (optional)..."
+                        placeholder={editingTask ? ">> Edit mission briefing..." : ">> Add mission briefing (optional)..."}
                         className="w-full bg-gray-900/70 border border-fuchsia-500/50 text-gray-400 px-3 py-1.5 mt-2 focus:outline-none focus:ring-2 focus:ring-fuchsia-400 focus:border-transparent transition-all h-16 resize-none text-sm"
                         rows="2"
                     ></textarea>
