--- a/index.html
+++ b/index.html
@@ -189,6 +189,18 @@
       .confirmation-fade {
         animation: fadeInOut 2s ease-in-out forwards;
       }
+
+      @keyframes pulsate-bar-glow {
+        0%, 100% {
+          box-shadow: 0 0 5px 2px rgba(217, 70, 239, 0.5), 0 0 8px 3px rgba(217, 70, 239, 0.3);
+        }
+        50% {
+          box-shadow: 0 0 15px 5px rgba(217, 70, 239, 0.8), 0 0 25px 8px rgba(217, 70, 239, 0.6);
+        }
+      }
+      .animate-bar-glow {
+        animation: pulsate-bar-glow 1.5s ease-in-out infinite;
+      }
     </style>
   <script type="importmap">
 {
@@ -372,7 +384,7 @@ const TaskItem = ({ task, onComplete, onRemove, onEdit, isEditing, isFlashing })
       onPointerUp={handlePointerUp}
       onPointerLeave={handlePointerUp}
     >
-      <div className={`absolute left-0 top-0 h-full w-1.5 ${config.barColor} ${task.priority === 'High' ? 'animate-pulse' : ''}`}></div>
+      <div className={`absolute left-0 top-0 h-full w-1.5 ${config.barColor} ${task.priority === 'High' ? 'animate-bar-glow' : ''}`}></div>
       <div className="flex items-center justify-between pl-4">
         <div className="flex-grow pr-4">
             <p className="text-xs text-cyan-600/80 mb-1">// LOGGED: {formatTimestamp(task.createdAt)}</p>
