--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
 
       @keyframes pulsate-bar-glow {
         0%, 100% {
-          box-shadow: 0 0 5px 2px rgba(217, 70, 239, 0.5), 0 0 8px 3px rgba(217, 70, 239, 0.3);
+          box-shadow: 0 0 4px 1px rgba(217, 70, 239, 0.4);
         }
         50% {
-          box-shadow: 0 0 15px 5px rgba(217, 70, 239, 0.8), 0 0 25px 8px rgba(217, 70, 239, 0.6);
+          box-shadow: 0 0 7px 2px rgba(217, 70, 239, 0.7);
         }
       }
       .animate-bar-glow {
