--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
 import React, { useState, useCallback, useEffect, useRef } from 'react';
 import ReactDOM from 'react-dom/client';
 
-const API_URL = 'http://localhost:5000/api';
+// IMPORTANT: Replace this with your actual Vercel backend URL
+const API_URL = 'https://YOUR_VERCEL_BACKEND_URL.vercel.app/api';
 
 // === components/Icons.jsx ===
 const AddIcon = ({ className }) => (
