--- a/index.html
+++ b/index.html
@@ -219,8 +219,13 @@
 import React, { useState, useCallback, useEffect, useRef } from 'react';
 import ReactDOM from 'react-dom/client';
 
-// IMPORTANT: Replace this with your actual Vercel backend URL
+// ===================================================================================
+// !!! IMPORTANT: DEPLOYMENT CONFIGURATION !!!
+// ===================================================================================
+// Replace the placeholder URL below with the actual URL of your deployed Vercel backend.
+// Example: 'https://my-mission-planner-backend.vercel.app/api'
 const API_URL = 'https://YOUR_VERCEL_BACKEND_URL.vercel.app/api';
+// ===================================================================================
 
 // === components/Icons.jsx ===
 const AddIcon = ({ className }) => (
