--- a/index.html
+++ b/index.html
@@ -222,9 +222,8 @@ import ReactDOM from 'react-dom/client';
 // ===================================================================================
 // !!! IMPORTANT: DEPLOYMENT CONFIGURATION !!!
 // ===================================================================================
-// Replace the placeholder URL below with the actual URL of your deployed Vercel backend.
-// Example: 'https://my-mission-planner-backend.vercel.app/api'
-const API_URL = 'https://YOUR_VERCEL_BACKEND_URL.vercel.app/api';
+// This URL has been set to the backend you provided.
+const API_URL = 'https://111-phi-self.vercel.app/api';
 // ===================================================================================
 
 // === components/Icons.jsx ===
